--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
     // Apply the java-library plugin for API and implementation separation.
     id 'java-library'
-    id "com.vanniktech.maven.publish" version "0.34.0"
+    id "com.vanniktech.maven.publish" version "0.35.0"
 }
 
 repositories {
@@ -42,7 +42,7 @@ tasks.named('test') {
 }
 
 mavenPublishing {
-    publishToMavenCentral()
+    publishToMavenCentral(true)
     signAllPublications()
     coordinates("io.github.domix", "pubpoc", "0.0.1")
 
